# audio_venus

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_linux.sh  requirements.txt
cmake/: linux64.cmake
examples/: README.md
examples/audio_test/: README.md  run.sh
examples/audio_test/scripts/: audio_py.py  filtering.py  functional.py  test_bank.py  test_fbank.py  test_functional.py  test_linger.py  test_stft.py  test_thinker.py
examples/mylib_test/: run.sh
examples/mylib_test/scripts/: mylib.py
examples/snoring_detect_test/: READMME.md  run.sh
examples/snoring_detect_test/data/: snoring_net.quant.onnx  snoring_net.quant.pkg
examples/snoring_detect_test/scripts/: bin2header.py  snoring_detect_py.py
examples/wekws_test/: requirements.txt  run.sh
examples/wekws_test/scripts/: test_fbank.py  test_thinker.py  wekws.py
include/audio/: fft.h
include/mylib/: mylib.h
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  fbank_c.c  thinker.c
src/audio_test/: CMakeLists.txt  test.c  test.h  test_fbank.c  test_fft.c
src/mylib/: CMakeLists.txt  mylib.c
src/mylib_test/: CMakeLists.txt  main.c
src/snoring_detect/: CMakeLists.txt  snoring_detect.c
src/snoring_detect_test/: CMakeLists.txt  audio_segment_20_pad_float32.bin.h  main.c
src/thinker/: CMakeLists.txt
src/wekws/: CMakeLists.txt  define.h  fbank_c.c  fbank_c.h  fft.c  kws.c  kws.h  snoring_detect.c  snoring_detect.h  thinker.c  thinker.h
src/wekws_test/: CMakeLists.txt  main.c  test.c  test.h  test_fbank.c  test_fft.c  test_kws.c
